package cn.yyb.behavioral.Iterator;

/**
 * 表示集合的接口
 * @author yueyubo <br>
 * @date 2024-05-26 12:16
 */
public interface Aggregate {
    Iterator iterator();

}
