package cn.yyb.behavioral.Iterator;

/**
 * @author yueyubo <br>
 * @date 2024-05-26 12:22
 */
public class Book {
    private String name;

    public Book(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }
}
