package cn.yyb.behavioral.Iterator;

/**
 * 遍历集合的接口
 * @author yueyubo <br>
 * @date 2024-05-26 12:19
 */
public interface Iterator {
    boolean hasNext();

    Object next();
}
